--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "formidable": "^1.2.1",
     "mongo-db": "1.0.2",
     "mongoose": "5.8.11"
   },
